# SlicerAgent

./: .gitignore  README.md  main.py  pyproject.toml
SlicerExtensionDemo/: CMakeLists.txt
SlicerExtensionDemo/AgentUI/: AgentUI.py  CMakeLists.txt
SlicerExtensionDemo/AgentUI/Resources/UI/: AgentUI.ui
app/: config.py  exceptions.py  llm.py  schema.py
app/agent/: __init__.py  base.py  mcp.py  react.py  slicer_agent.py  toolcall.py
app/prompt/: toolcall.py
app/slicer/: __init__.py  agent.py  mcp.py  process.py
app/tool/: __init__.py  create_chat_completion.py  mcp.py  tool_collection.py  web_search.py
app/tool/search/: __init__.py
