[project]
name = "sliceragent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "googlesearch-python~=1.3.0",
    "loguru~=0.7.3",
    "openai~=1.66.3",
    "pydantic~=2.10.6",
    "tenacity~=9.0.0",
    "tiktoken~=0.9.0",
    "toml>=0.10.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools.packages.find]
include = ["app"]
